--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.5",
-    "react-native-sound": "^0.11.0"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-progress": "^3.6.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-sound": "^0.11.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.8",
+    "react-navigation-stack": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
