--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,9 +188,9 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-track-player')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-vector-icons')
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
@@ -209,3 +209,8 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+project.ext.vectoricons = [
+        iconFontNames: [ 'Feather.ttf' ] // Name of the font files you want to copy
+]
