--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.8",
-    "react-navigation-stack": "^1.9.0"
+    "react-navigation-stack": "^1.9.0",
+    "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
