--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^3.6.0",
-    "react-native-reanimated": "^1.2.0",
+    "react-native-reanimated": "^1.3.0",
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.8",
     "react-navigation-stack": "^1.9.0",
-    "react-navigation-transitions": "^1.0.12"
+    "react-navigation-transitions": "^1.0.12",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
