--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.0.1",
     "@react-native-community/slider": "^2.0.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
