--- a/ios/PodcastApp.xcodeproj/xcshareddata/xcschemes/PodcastApp.xcscheme
+++ b/ios/PodcastApp.xcodeproj/xcshareddata/xcschemes/PodcastApp.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "&#x7eff;&#x5e3d;&#x5b50;&#x5927;&#x5b66;.app"
+               BuildableName = "PodcastApp.app"
                BlueprintName = "PodcastApp"
                ReferencedContainer = "container:PodcastApp.xcodeproj">
             </BuildableReference>
@@ -59,7 +59,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "&#x7eff;&#x5e3d;&#x5b50;&#x5927;&#x5b66;.app"
+            BuildableName = "PodcastApp.app"
             BlueprintName = "PodcastApp"
             ReferencedContainer = "container:PodcastApp.xcodeproj">
          </BuildableReference>
@@ -92,7 +92,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "&#x7eff;&#x5e3d;&#x5b50;&#x5927;&#x5b66;.app"
+            BuildableName = "PodcastApp.app"
             BlueprintName = "PodcastApp"
             ReferencedContainer = "container:PodcastApp.xcodeproj">
          </BuildableReference>
@@ -109,7 +109,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "&#x7eff;&#x5e3d;&#x5b50;&#x5927;&#x5b66;.app"
+            BuildableName = "PodcastApp.app"
             BlueprintName = "PodcastApp"
             ReferencedContainer = "container:PodcastApp.xcodeproj">
          </BuildableReference>
